fix ipad layout issues

--- a/src/BeYourMarket.Web/Themes/Default/Content/theme.less
+++ b/src/BeYourMarket.Web/Themes/Default/Content/theme.less
@@ -465,12 +465,12 @@ body > .header {
     .right-section {
         margin-left: @left-section-margin;
     }
-    /*Right side strech mode*/
-    .right-section.strech {
+    /*Right side stretch mode*/
+    .right-section.stretch {
         margin-left: 0;
     }
 
-    .right-section.strech > .content-header {
+    .right-section.stretch > .content-header {
         margin-top: 0px;
     }
 }
@@ -489,7 +489,7 @@ header .navbar-form {
 body > .header {
     position: relative;
     max-height: 100px;
-    z-index: 1030;
+    z-index: 100;
 }
 
 body > .header .navbar {
@@ -584,12 +584,17 @@ body > .header .logo .icon {
     .navbar-nav > li > a {
         padding-top: 14px;
         padding-bottom: 14px;
-        line-height: 20px;
+        line-height: 20px;        
     }
 
     .navbar-nav .open .dropdown-menu {
         position: absolute;
         background-color: @background-color;
+    }    
+}
+@media (min-width: 768px) and (max-width:1024px) {
+    .user-nav .navbar-nav > li > a {        
+        font-size: 14px;
     }
 }
 
@@ -1471,4 +1476,31 @@ body > .header .logo .icon {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;  
+
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;    
+}
+
+@media (min-width: 768px) and (max-width:1024px) {
+  .row-eq-height .col-md-4{
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;        
+      width: 33%;
+  }  
+}
+
+@media (min-width: 992px){
+    .col-lg-3{
+      width:24.5%;
+  }
+}
+
+.truncate {  
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
